Update properties for new `labkey-api-java` repository structure

--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -6,8 +6,7 @@ gradle.ext.apiProjectPath=":server:modules:platform:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.embeddedProjectPath=":server:embedded"
 gradle.ext.internalProjectPath=":server:modules:platform:internal"
-gradle.ext.remoteApiProjectPath=":remoteapi:labkey-api-java:labkey-client-api"
-gradle.ext.sasApiProjectPath=":remoteapi:labkey-api-java:labkey-api-sas"
+gradle.ext.remoteApiProjectPath=":remoteapi:labkey-api-java"
 gradle.ext.jdbcApiProjectPath=":remoteapi:labkey-api-jdbc"
 gradle.ext.schemasProjectPath=":server:modules:platform:api"
 gradle.ext.testProjectPath=":server:testAutomation"
