--- a/gradle.properties
+++ b/gradle.properties
@@ -45,7 +45,7 @@ buildFromSource=true
 
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
-labkeyVersion=23.2-SNAPSHOT
+labkeyVersion=1.39.0-refactor-SNAPSHOT
 labkeyClientApiVersion=4.2.0-refactor-SNAPSHOT
 
 # Version numbers for the various binary artifacts that are included when
