--- a/gradle.properties
+++ b/gradle.properties
@@ -45,7 +45,7 @@ buildFromSource=true
 
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
-labkeyVersion=1.39.0-refactor-SNAPSHOT
+labkeyVersion=23.2-SNAPSHOT
 labkeyClientApiVersion=4.2.0-refactor-SNAPSHOT
 
 # Version numbers for the various binary artifacts that are included when
@@ -58,7 +58,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.21.0
 gradleNodePluginVersion=3.0.1
-gradlePluginsVersion=1.38.0
+gradlePluginsVersion=1.39.0-refactor-SNAPSHOT
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
