Test newest point release, MS SQL JDBC 11.2.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -226,7 +226,7 @@ lombokVersion=1.18.24
 
 mysqlDriverVersion=8.0.31
 
-mssqlJdbcVersion=12.1.0.jre11-preview
+mssqlJdbcVersion=11.2.3.jre17
 
 # forced compatibility between docker and UserReg-WS
 nettyVersion=4.1.48.Final
