Upgrade SQL Server and Oracle JDBC drivers (#377)

--- a/gradle.properties
+++ b/gradle.properties
@@ -177,6 +177,7 @@ htsjdkVersion=2.24.1
 httpclient5Version=5.2.1
 httpcore5Version=5.2
 
+# Not used directly, but these are widely used transitive dependencies
 httpclientVersion=4.5.14
 httpcoreVersion=4.4.16
 
@@ -225,7 +226,7 @@ lombokVersion=1.18.24
 
 mysqlDriverVersion=8.0.31
 
-mssqlJdbcVersion=11.2.1.jre17
+mssqlJdbcVersion=11.2.3.jre17
 
 # forced compatibility between docker and UserReg-WS
 nettyVersion=4.1.48.Final
@@ -237,7 +238,7 @@ opencsvVersion=2.3
 
 openTracingVersion=0.33.0
 
-oracleJdbcVersion=21.7.0.0
+oracleJdbcVersion=21.8.0.0
 
 patriciaTrieVersion=0.6
 
