--- a/gradle.properties
+++ b/gradle.properties
@@ -59,7 +59,7 @@ windowsProteomicsBinariesVersion=1.0
 artifactoryPluginVersion=4.21.0
 gradleNodePluginVersion=3.0.1
 #gradlePluginsVersion=1.39.1
-gradlePluginsVersion=1.40.0-removeInternal-SNAPSHOT
+gradlePluginsVersion=1.40.0
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
