Remove another reference to internal

--- a/gradle.properties
+++ b/gradle.properties
@@ -83,7 +83,7 @@ npmWorkDirectory=.node
 
 # Version numbers for external libraries that we depend on
 # These are the libraries that are used by our "base" modules
-# (internal, api, bootstrap, schemas, remoteapi). Other modules that
+# (api, bootstrap, schemas, remoteapi). Other modules that
 # have extensive other external dependencies should have a local
 # gradle.properties file to declare these version numbers.
 
