--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ tools/
 .idea/jsLibraryMappings.xml
 .idea/modules.xml
 .idea/workspace.xml
+.idea/dataSources/
 .idea/dataSources.xml
 .idea/dataSources.local.xml
 .idea/.name
