--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -11,15 +11,18 @@ buildscript {
 
         }
     }
+    // For testing changes to the gradle plugins, uncomment the dependencies block below and reference the location
+    // of your gradlePlugin enlistment.  Then comment out the following dependencies
+    // block.  You will need to build the gradlePlugins jar file manually to pick up new changes.
 //    dependencies {
-//        classpath files("../../../gradlePlugin/build/libs/gradlePlugin-${gradlePluginsVersion}.jar")
+//        classpath files("../gradlePlugin/build/libs/gradlePlugin-${gradlePluginsVersion}.jar")
 //        classpath "org.apache.commons:commons-lang3:${commonsLang3Version}"
-//        classpath "org.apache.commons:commons-text:1.9"
+//        classpath "org.apache.commons:commons-text:${commonsTextVersion}"
 //        classpath "commons-io:commons-io:${commonsIoVersion}"
 //        classpath "org.apache.httpcomponents:httpclient:${httpclientVersion}"
-//        classpath "org.json:json:20210307"
-//        classpath "com.fasterxml.jackson.core:jackson-databind:2.12.2"
-//        classpath "org.ajoberstar.grgit:grgit-gradle:4.1.0"
+//        classpath "org.json:json:${orgJsonVersion}"
+//        classpath "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
+//        classpath "org.ajoberstar.grgit:grgit-gradle:${grgitGradleVersion}"
 //    }
     dependencies {
         classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
