--- a/gradle.properties
+++ b/gradle.properties
@@ -58,8 +58,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.21.0
 gradleNodePluginVersion=3.0.1
-#gradlePluginsVersion=1.39.1
-gradlePluginsVersion=1.41.0-gradle8-SNAPSHOT
+gradlePluginsVersion=1.40.2
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
