--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,9 @@ allprojects {
 //                    maven {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
+                    maven {
+                    	url "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn"
+                    }
                 }
 
             }
