--- a/gradle/settings/base.gradle
+++ b/gradle/settings/base.gradle
@@ -12,6 +12,7 @@ buildscript {
         }
         if (gradlePluginsVersion.contains("SNAPSHOT"))
         {
+            mavenLocal()
             maven {
                 url "${artifactory_contextUrl}/plugins-snapshot-local"
             }
