--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -5,6 +5,7 @@ buildscript {
         }
         if (gradlePluginsVersion.contains("SNAPSHOT"))
         {
+            mavenLocal()
             maven {
                 url "${artifactory_contextUrl}/plugins-snapshot-local"
             }
