Explain why the extra repo is defined at the root

--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,8 @@ allprojects {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
                     maven {
+                        // Mondrian dependencies are available via this repository. It's a direct dependency of the Query
+                        // module but is declared here as many modules depend on Query and therefore need it as well.
                     	url "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn"
                     }
                 }
