--- a/build.gradle
+++ b/build.gradle
@@ -162,6 +162,11 @@ allprojects {
 //                    maven {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
+                    maven {
+                        // Mondrian dependencies are available via this repository. It's a direct dependency of the Query
+                        // module but is declared here as many modules depend on Query and therefore need it as well.
+                    	url "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn"
+                    }
                 }
                 // this is located after our local repos because we need to pick up our version of radeox instead of the one found in mavenCentral
                 // (should probably have published our mods with a different version)
