--- a/settings.gradle
+++ b/settings.gradle
@@ -4,30 +4,27 @@ pluginManagement {
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
-        if (gradlePluginsVersion.contains("SNAPSHOT") || versioningPluginVersion.contains("SNAPSHOT")) {
+        if (gradlePluginsVersion.contains("SNAPSHOT") || versioningPluginVersion.contains("SNAPSHOT"))
+        {
+            mavenLocal()
             maven {
                 url "${artifactory_contextUrl}/plugins-snapshot-local"
             }
         }
     }
-    plugins {
-        id 'org.labkey.build.antlr' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.api' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.applyLicenses' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.base' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.distribution' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.fileModule' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.javaModule' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.jsdoc' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.module' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.multiGit' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.npmRun' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.serverDeploy' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.teamCity' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.testRunner' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.tomcat' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.build.xsddoc' version "${gradlePluginsVersion}" apply false
-        id 'org.labkey.versioning' version "${versioningPluginVersion}" apply false
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == 'org.labkey.versioning')
+            {
+                // Versioning isn't published with plugin markers
+                useModule("org.labkey.build:versioning:${versioningPluginVersion}")
+            }
+            else if (requested.id.namespace == 'org.labkey.build')
+            {
+                // This doesn't really do anything. The jar on the classpath will take precedence
+                useVersion("${gradlePluginsVersion}")
+            }
+        }
     }
 }
 
@@ -37,24 +34,15 @@ buildscript {
             url "${artifactory_contextUrl}/plugins-release"
         }
         if (gradlePluginsVersion.contains("SNAPSHOT")) {
+            // For testing changes to the gradle plugins. Publish 'gradlePlugins' locally using 'publishToMavenLocal'.
+            // Update 'gradlePluginsVersion' to match the plugin SNAPSHOT version.
+            // You will need to rerun the publish task to pick up new changes.
+            mavenLocal()
             maven {
                 url "${artifactory_contextUrl}/plugins-snapshot-local"
             }
         }
     }
-    // For testing changes to the gradle plugins, uncomment the dependencies block below and reference the location
-    // of your gradlePlugin enlistment.  Then comment out the following dependencies
-    // block.  You will need to build the gradlePlugins jar file manually to pick up new changes.
-//    dependencies {
-//        classpath files("../gradlePlugin/build/libs/gradlePlugin-${gradlePluginsVersion}.jar")
-//        classpath "org.apache.commons:commons-lang3:${commonsLang3Version}"
-//        classpath "org.apache.commons:commons-text:1.9"
-//        classpath "commons-io:commons-io:${commonsIoVersion}"
-//        classpath "org.apache.httpcomponents:httpclient:${httpclientVersion}"
-//        classpath "org.json:json:20210307"
-//        classpath "com.fasterxml.jackson.core:jackson-databind:2.12.2"
-//        classpath "org.ajoberstar.grgit:grgit-gradle:4.1.0"
-//    }
     dependencies {
         classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
     }
