--- a/gradle.properties
+++ b/gradle.properties
@@ -91,12 +91,12 @@ activationVersion=1.2.2
 annotationsVersion=15.0
 
 #Unifying version used by DISCVR and Premium
-apacheDirectoryVersion=1.0.3
+apacheDirectoryVersion=2.1.3
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
-apacheMinaVersion=2.0.19
+apacheMinaVersion=2.2.1
 
 # Keep in sync with springBootTomcatVersion below
-apacheTomcatVersion=9.0.71
+apacheTomcatVersion=9.0.73
 
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
@@ -135,7 +135,7 @@ commonsValidatorVersion=1.7
 
 datadogVersion=0.108.1
 
-dom4jVersion=1.6.1
+dom4jVersion=2.1.4
 
 ehcacheCoreVersion=2.6.8
 
@@ -163,8 +163,8 @@ graalVersion=22.3.1
 gsonVersion=2.8.9
 
 guavaVersion=31.1-jre
-gwtVersion=2.8.2
-gwtServletVersion=2.8.2
+gwtVersion=2.10.0
+gwtServletVersion=2.10.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
@@ -191,8 +191,10 @@ jamaVersion=1.0.3
 javassistVersion=3.20.0-GA
 
 javaMailVersion=1.6.7
+javaxAnnotationVersion=1.3.2
 
 # No longer part of Java 10. Dependency for many modules.
+jaxbApiVersion=2.3.1
 jaxbVersion=2.3.3
 
 jaxrpcVersion=1.1
@@ -228,7 +230,7 @@ mysqlDriverVersion=8.0.32
 mssqlJdbcVersion=12.2.0.jre11
 
 # forced compatibility between docker and UserReg-WS
-nettyVersion=4.1.48.Final
+nettyVersion=4.1.91.Final
 
 objenesisVersion=1.0
 
@@ -251,7 +253,7 @@ postgresqlDriverVersion=42.5.3
 
 quartzVersion=2.3.2
 
-rforgeVersion=0.6-8
+rforgeVersion=0.6-8.1
 
 # sync with Tika version
 romeVersion=1.18.0
@@ -264,12 +266,12 @@ slf4jLog4j12Version=2.0.3
 # this version is forced for compatibility with api, LDK, and workflow
 slf4jLog4jApiVersion=2.0.3
 
-springBootVersion=2.7.9
+springBootVersion=2.7.10
 # This MUST match the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=9.0.71
+springBootTomcatVersion=9.0.73
 
-springVersion=5.3.25
+springVersion=5.3.26
 
 sqliteJdbcVersion=3.7.2
 
@@ -287,7 +289,7 @@ tukaaniXZVersion=1.9
 validationApiVersion=1.1.0.Final
 
 # NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions. We force the later version.
-woodstoxCoreVersion=6.2.1
+woodstoxCoreVersion=6.5.0
 
 # saml and query bring in different versions transitively; we force the later one
 xalanVersion=2.7.2
