--- a/gradle.properties
+++ b/gradle.properties
@@ -112,6 +112,8 @@ bouncycastleVersion=1.72
 
 cglibNodepVersion=2.2.3
 
+checkerQualVersion=3.31.0
+
 # the beanutils version is not the default version brought from commons-validator and/or commons-digester
 # in the :server:api module but is required for some of our code to compile
 commonsBeanutilsVersion=1.9.4
