Remove a couple more references to "internal"

--- a/gradle/settings/base.gradle
+++ b/gradle/settings/base.gradle
@@ -1,6 +1,6 @@
 // An empty module set that will build the bare minimum set of modules specified in gradle.settings, which are:
 //
-// - The 8 base modules (api, audit, core, experiment, filecontent, internal, pipeline, query)
+// - The 7 base modules (api, audit, core, experiment, filecontent, pipeline, query)
 // - The test modules (all modules in /server/test/modules plus devtools)
 //
 // To exclude the test modules, comment out this line in settings.gradle: BuildUtils.includeTestModules(this.settings, rootDir)
