Enable access log for embedded Tomcat

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -51,3 +51,9 @@ management.endpoints.web.exposure.include=*
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
+
+# Enable tomcat access log
+server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %S %I "%{Referrer}i" "%{User-Agent}i" %{LABKEY.username}s
