--- a/gradle.properties
+++ b/gradle.properties
@@ -165,7 +165,7 @@ graalVersion=22.3.1
 # "java.lang.NoSuchMethodError: 'void com.google.gson.internal.ConstructorConstructor.<init>(java.util.Map)'" errors
 gsonVersion=2.8.9
 
-guavaVersion=32.0.0-jre
+guavaVersion=32.0.1-jre
 gwtVersion=2.10.0
 gwtServletVersion=2.10.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
@@ -271,12 +271,15 @@ slf4jLog4j12Version=2.0.7
 # this version is forced for compatibility with api, LDK, and workflow
 slf4jLog4jApiVersion=2.0.7
 
+# This is a dependency for HTSJDK. Force to avoid a deserialization problem. Remove once HTSJDK bumps its preferred version
+snappyJavaVersion=1.1.10.1
+
 springBootVersion=2.7.12
 # This MUST match the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
 springBootTomcatVersion=9.0.75
 
-springVersion=5.3.27
+springVersion=5.3.28
 
 sqliteJdbcVersion=3.42.0.0
 
