--- a/gradle.properties
+++ b/gradle.properties
@@ -165,6 +165,8 @@ graalVersion=22.3.1
 # "java.lang.NoSuchMethodError: 'void com.google.gson.internal.ConstructorConstructor.<init>(java.util.Map)'" errors
 gsonVersion=2.8.9
 
+grpcVersion=1.56.0
+
 guavaVersion=32.0.1-jre
 gwtVersion=2.10.0
 gwtServletVersion=2.10.0
