Upgrade quartz scheduler version

--- a/gradle.properties
+++ b/gradle.properties
@@ -258,7 +258,7 @@ pollingWatchVersion=0.2.0
 
 postgresqlDriverVersion=42.6.0
 
-quartzVersion=2.3.2
+quartzVersion=2.5.0-rc1
 
 rforgeVersion=0.6-8.1
 
