Update eigenbase libs and transitive dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -94,6 +94,8 @@ activationVersion=1.2.2
 
 annotationsVersion=15.0
 
+apacheAntVersion=1.10.13
+
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=2.1.3
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
