--- a/gradle.properties
+++ b/gradle.properties
@@ -88,13 +88,14 @@ npmWorkDirectory=.node
 # These are the libraries that are used by our "base" modules
 # (api, bootstrap, schemas, remoteapi). Other modules that
 # have extensive other external dependencies should have a local
-# gradle.properties file to declare these version numbers.
+# gradle.properties file to declare these version numbers. Naming
+# convention is <library name>Version camel-cased, i.e. "jacksonVersion".
 
 activationVersion=1.2.2
 
 annotationsVersion=15.0
 
-apacheAntVersion=1.10.13
+antVersion=1.10.13
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=2.1.3
