Use library substitution

--- a/gradle.properties
+++ b/gradle.properties
@@ -147,6 +147,9 @@ datadogVersion=0.108.1
 dom4jVersion=2.1.4
 
 ehcacheCoreVersion=2.6.8
+eigenbasePropertiesVersion=1.1.6
+eigenbaseResgenVersion=1.3.7
+eigenbaseXomVersion=1.3.6
 
 flyingsaucerVersion=R8
 
