Adopt the latest Spring Boot and Tomcat releases

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,7 +5,7 @@ smtpHost=localhost
 smtpUser=Anonymous
 smtpPort=25
 
-databaseDefault=labkey
+databaseDefault=labkey237
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
@@ -14,7 +14,7 @@ databaseDefaultPort=1433
 jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=sa
+jdbcPassword=Strong!Passw0rd
 
 # key for the encrypted property store and other potentially sensitive content
 encryptionKey=defaultKey
