--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,7 +5,7 @@ smtpHost=localhost
 smtpUser=Anonymous
 smtpPort=25
 
-databaseDefault=labkey
+databaseDefault=labkey237
 databaseBootstrap=labkey2
 databaseMaster=template1
 databaseDefaultHost=localhost
@@ -13,8 +13,8 @@ databaseDefaultPort=5432
 
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
-jdbcUser=postgres
-jdbcPassword=sasa
+jdbcUser=labkey
+jdbcPassword=labkey
 
 # key for the encrypted property store and other potentially sensitive content
 encryptionKey=defaultKey
