Upgrade to Lucene 9.8.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -236,13 +236,14 @@ log4j2Version=2.20.0
 
 lombokVersion=1.18.24
 
-luceneVersion=9.7.0
-
-mysqlDriverVersion=8.1.0
+luceneVersion=9.8.0
 
 mssqlJdbcVersion=12.4.1.jre11
 
-# forced compatibility between docker and UserReg-WS
+mysqlDriverVersion=8.1.0
+
+# forced compatibility between docker and UserReg-
+# update version in modules/UserReg-WS/gradle.properties as well
 nettyVersion=4.1.100.Final
 
 objenesisVersion=1.0
