--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -72,7 +72,7 @@ spring.main.banner-mode=off
 #jsonaccesslog.condition-if=attributeName
 #jsonaccesslog.condition-unless=attributeName
 
-# Uncomment one of the below properties (csp.report or csp.enforce) to enable Content Security Policy (CSP) headers
+# Define one or both of 'csp.report' and 'csp.enforce' to enable Content Security Policy (CSP) headers
 # Do not copy-and-paste these examples for any production environment without understanding the meaning of each directive!
 
 # example usage 1 - very strict, disallows 'external' websites, disallows unsafe-inline, but only reports violations (does not enforce)
