Initial support for Tomcat 10 in platform repo

--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,10 @@ allprojects {
                                 basic(BasicAuthentication)
                             }
                         }
+                        maven {
+                            // TODO Jakarta - GWT support
+                            url "https://repo.vertispan.com/gwt-snapshot/"
+                        }
                         mavenContent {
                             snapshotsOnly()
                         }
@@ -193,7 +197,6 @@ allprojects {
                     // force version for consistency with workflow, api, SequenceAnalysis
                     force "org.apache.commons:commons-lang3:${commonsLang3Version}"
                     force "commons-dbcp:commons-dbcp:${commonsDbcpVersion}"
-                    force "commons-fileupload:commons-fileupload:${commonsFileuploadVersion}"
                     force "commons-io:commons-io:${commonsIoVersion}"
                     force "commons-logging:commons-logging:${commonsLoggingVersion}"
                     force "commons-pool:commons-pool:${commonsPoolVersion}"
