--- a/gradle.properties
+++ b/gradle.properties
@@ -91,7 +91,7 @@ npmWorkDirectory=.node
 # gradle.properties file to declare these version numbers. Naming
 # convention is <library name>Version camel-cased, i.e. "jacksonVersion".
 
-activationVersion=1.2.2
+activationVersion=2.1.2
 
 annotationsVersion=15.0
 
@@ -103,7 +103,7 @@ apacheDirectoryVersion=2.1.3
 apacheMinaVersion=2.2.1
 
 # Keep in sync with springBootTomcatVersion below
-apacheTomcatVersion=9.0.83
+apacheTomcatVersion=10.1.17
 
 # (mothership) -> json-path -> json-smart -> accessor-smart
 # (core) -> graalvm
@@ -132,7 +132,6 @@ commonsCompressVersion=1.24.0
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
-commonsFileuploadVersion=1.5
 commonsIoVersion=2.15.0
 commonsLangVersion=2.6
 commonsLang3Version=3.13.0
@@ -175,7 +174,7 @@ grpcVersion=1.60.0
 
 guavaVersion=32.1.3-jre
 gwtVersion=2.10.0
-gwtServletVersion=2.10.0
+gwtServletVersion=2.11.0-jakarta-SNAPSHOT
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
@@ -201,7 +200,7 @@ jamaVersion=1.0.3
 
 javassistVersion=3.20.0-GA
 
-javaMailVersion=1.6.7
+javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
 # No longer part of Java 10. Dependency for many modules.
@@ -273,7 +272,7 @@ rforgeVersion=0.6-8.1
 romeVersion=1.19.0
 
 # Tomcat 9 implements 4.x
-servletApiVersion=4.0.1
+servletApiVersion=6.0.0
 
 # this version is forced for compatibility with pipeline and tika
 slf4jLog4j12Version=2.0.7
@@ -283,12 +282,12 @@ slf4jLog4jApiVersion=2.0.7
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.5
 
-springBootVersion=2.7.18
+springBootVersion=3.1.5
 # This MUST match the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=9.0.83
+springBootTomcatVersion=10.1.15
 
-springVersion=5.3.30
+springVersion=6.0.13
 
 # Do not upgrade until BaseDaoImpl stops calling getGeneratedKeys()
 sqliteJdbcVersion=3.42.0.1
@@ -305,6 +304,7 @@ tikaVersion=2.8.0
 tukaaniXZVersion=1.9
 
 validationApiVersion=1.1.0.Final
+validationJakartaApiVersion=3.0.2
 
 # NLP and SAML bring woodstox-core in as a transitive dependency but with very different versions. We force the later version.
 woodstoxCoreVersion=6.5.0
