--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -69,8 +69,7 @@ dependencies {
     }
 
     runtimeOnly "org.apache.tomcat.embed:tomcat-embed-jasper:${springBootTomcatVersion}"
-    runtimeOnly "javax.mail:javax.mail-api:1.6.2"
-    runtimeOnly group: "com.sun.mail", name: "javax.mail", version: "1.6.0"
+    runtimeOnly group: "com.sun.mail", name: "jakarta.mail", version: "${javaMailVersion}"
     runtimeOnly group: "org.apache.tomcat", name: "tomcat-dbcp", version: "${springBootTomcatVersion}"
     runtimeOnly "org.postgresql:postgresql:${postgresqlDriverVersion}"
 
