Match log directory

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -87,7 +87,7 @@ spring.main.banner-mode=off
 #setupTask#csp.report=default-src 'self' https: http: ;\nconnect-src 'self' ;\nobject-src 'none' ;\nstyle-src 'self' https: 'unsafe-inline' ;\nimg-src 'self' https: data: ;\nscript-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}' ;\nbase-uri 'self' ;\nframe-ancestors 'self' ;\nreport-to /admin-contentsecuritypolicyreport.api ;\nreport-uri /admin-contentsecuritypolicyreport.api ;
 
 # Use a non-temp directory for tomcat
-#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy/tomcat
+#setupTask#server.tomcat.basedir=@@pathToServer@@/build/deploy/embedded
 
 # Enable tomcat access log
 server.tomcat.accesslog.enabled=true
