Add docker because of puppeteer test dependency

--- a/gradle/settings/tomcat10.gradle
+++ b/gradle/settings/tomcat10.gradle
@@ -73,7 +73,7 @@ BuildUtils.includeModules(this.settings, rootDir, [
 //        "server/modules/customModules",
 //        "server/modules/dataFinder",
         "server/modules/dataintegration",
-//        "server/modules/docker",
+        "server/modules/docker",
 //        "server/modules/ehrModules",
 //        "server/modules/evaluationContent",
 //        "server/modules/fileTransfer",
